Ajout de la configuration de base pour WordPress Bedrock avec Docker, y compris des fichiers .env, .gitignore, et des configurations spécifiques pour les environnements de développement et de staging.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
 
 
+# Configuration Docker Compose
+# Copiez ce fichier en .env et ajustez les valeurs selon vos besoins
+
+###> PROJECT ###
 NAME=BedrockCMS
 BASE=mariadb
+###< PROJECT ###
 
 ###> VERSIONS ###
 BACKEND_VERSION=1.0.0
@@ -21,32 +26,6 @@ ADMINER_DEFAULT_SERVER=${MYSQL_HOST}
 ADMINER_DEFAULT_DRIVER=mySQL
 ADMINER_DEFAULT_DB_NAME=${MYSQL_DATABASE}
 ###< MYSQL/ mariadb - adminer ###
-
-###> WORDPRESS BEDROCK DATABASE ###
-DB_NAME=${MYSQL_DATABASE}
-DB_USER=${MYSQL_USER}
-DB_PASSWORD=${MYSQL_PASSWORD}
-DB_HOST=${MYSQL_HOST}
-###< WORDPRESS BEDROCK DATABASE ###
-
-###> WORDPRESS CONFIGURATION ###
-WP_ENV=development
-WP_HOME=http://localhost:8080
-WP_SITEURL=${WP_HOME}/wp
-WP_DEBUG_LOG=/path/to/debug.log
-###< WORDPRESS CONFIGURATION ###
-
-###> WORDPRESS SECURITY KEYS ###
-# Générez vos clés sur: https://roots.io/salts.html
-AUTH_KEY='generateme'
-SECURE_AUTH_KEY='generateme'
-LOGGED_IN_KEY='generateme'
-NONCE_KEY='generateme'
-AUTH_SALT='generateme'
-SECURE_AUTH_SALT='generateme'
-LOGGED_IN_SALT='generateme'
-NONCE_SALT='generateme'
-###< WORDPRESS SECURITY KEYS ###
 
 ###> PORTS ###
 SQL_DOCKER_PORT=3306
