--- a/.env.bedrock.example
+++ b/.env.bedrock.example
@@ -2,15 +2,27 @@
 # Copiez ce fichier dans le dossier bedrock/ en tant que .env
 # et ajustez les valeurs selon vos besoins
 
+####> PROJECT INFO ###
+# Ces valeurs doivent correspondre à celles configurées dans .env pour docker-compose
+NAME=wordpress-debrock
+BASE=mariadb
+FOLDER_BACK=wp_debrock
+###< PROJECT INFO ###
+
 ###> DATABASE SETTINGS ###
-# Ces valeurs doivent correspondre à celles configurées dans docker-compose
-DB_NAME='BedrockCMS'
+# Ces valeurs doivent correspondre à celles configurées dans .env pour docker-compose
+DB_NAME=${NAME}_${BASE}
 DB_USER='user'
 DB_PASSWORD='password'
 DB_HOST='database'
+DB_PORT=3306
+
+# Optionally, you can use a data source name (DSN)
+# When using a DSN, you can remove the DB_NAME, DB_USER, DB_PASSWORD, and DB_HOST variables
+# DATABASE_URL='mysql://{DB_USER}:{DB_PASSWORD}@{DB_HOST}:{DB_PORT}/{DB_NAME}'
 
 # Optional database variables
-# DB_PREFIX='wp_'
+DB_PREFIX='wp_'
 ###< DATABASE SETTINGS ###
 
 ###> ENVIRONMENT ###
@@ -24,7 +36,7 @@ WP_ENV='development'
 
 ###> URLS ###
 WP_HOME='http://localhost:8080'
-WP_SITEURL="${WP_HOME}/wp"
+WP_SITEURL="${WP_HOME}/${FOLDER_BACK}"
 
 # Alternative pour HTTPS:
 # WP_HOME='https://votredomaine.com'
@@ -32,14 +44,14 @@ WP_SITEURL="${WP_HOME}/wp"
 
 ###> DEBUG SETTINGS ###
 # Chemin absolu vers le fichier de log (optionnel)
-# WP_DEBUG_LOG='/path/to/debug.log'
+# WP_DEBUG_LOG="${FOLDER_BACK}/debug.log"
 
 # Afficher les erreurs (true seulement en development)
 # WP_DEBUG_DISPLAY=true
 ###< DEBUG SETTINGS ###
 
 ###> WORDPRESS SECURITY KEYS ###
-# Générez vos propres clés sur: https://roots.io/salts.html
+# Générez vos propres clés sur: https://generator.corbisier.fr
 # IMPORTANT: Remplacez ces valeurs par des clés uniques générées !
 
 AUTH_KEY='generateme'
