--- a/.env.example
+++ b/.env.example
@@ -3,15 +3,17 @@
 # Configuration Docker Compose
 # Copiez ce fichier en .env et ajustez les valeurs selon vos besoins
 
-###> PROJECT ###
-NAME=BedrockCMS
+####> PROJECT INFO ###
+NAME=wordpress-debrock
 BASE=mariadb
-###< PROJECT ###
+ENV=development
+# development, staging, production
+###< PROJECT INFO ###
 
 ###> VERSIONS ###
 BACKEND_VERSION=1.0.0
-MARIADB_VERSION=10.6
-ADMINER_VERSION=4.8.1
+MARIADB_VERSION=11.7
+ADMINER_VERSION=5.3.0
 ###< VERSIONS ###
 
 ###> MYSQL/ mariadb - adminer ###
@@ -29,7 +31,7 @@ ADMINER_DEFAULT_DB_NAME=${MYSQL_DATABASE}
 
 ###> PORTS ###
 SQL_DOCKER_PORT=3306
-SQL_LOCALHOST_PORT=3388
+SQL_LOCALHOST_PORT=3306
 
 MAILER_DOCKER_SMTP_PORT=1025
 MAILER_LOCALHOST_SMTP_PORT=1025
@@ -41,11 +43,11 @@ HTTPS_LOCALHOST_PORT=443
 HTTP3_LOCALHOST_PORT=443
 
 ADMINER_DOCKER_PORT=8080
-ADMINER_LOCALHOST_PORT=5088
+ADMINER_LOCALHOST_PORT=8080
 ###< PORTS ###
 
 ###> FOLDERS ###
-FOLDER_BACK=serveur-backend
+FOLDER_BACK=wp_debrock
 FOLDER_DATA=database
 FOLDER_DATASQL=${FOLDER_DATA}/sql
 FOLDER_DATABASE=${FOLDER_DATA}/${DATABASE_NAME}
