Mise à jour des ports dans .env.example et README.md pour éviter les conflits, ajustement de la documentation pour la configuration de l'environnement.

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,8 @@ ADMINER_DEFAULT_DB_NAME=${MYSQL_DATABASE}
 ###< MYSQL/ mariadb - adminer ###
 
 ###> PORTS ###
+# Ajustez les ports LOCALHOST si nécessaire pour éviter
+# les conflits avec d'autres services sur votre machine
 SQL_DOCKER_PORT=3306
 SQL_LOCALHOST_PORT=3306
 
@@ -41,7 +43,7 @@ HTTPS_LOCALHOST_PORT=443
 HTTP3_LOCALHOST_PORT=443
 
 ADMINER_DOCKER_PORT=8080
-ADMINER_LOCALHOST_PORT=8080
+ADMINER_LOCALHOST_PORT=8088
 ###< PORTS ###
 
 ###> FOLDERS ###
