Correction du chemin dans le fichier .env.bedrock.example pour refléter le dossier wp_debrock

--- a/.env.bedrock.example
+++ b/.env.bedrock.example
@@ -1,5 +1,5 @@
 # Configuration WordPress Bedrock
-# Copiez ce fichier dans le dossier bedrock/ en tant que .env
+# Copiez ce fichier dans le dossier wp_debrock/ en tant que .env
 # et ajustez les valeurs selon vos besoins
 
 ####> PROJECT INFO ###
