--- a/.env.bedrock.example
+++ b/.env.bedrock.example
@@ -14,12 +14,12 @@ FOLDER_BACK=wp_debrock
 DB_NAME=${NAME}_${BASE}
 DB_USER='user'
 DB_PASSWORD='password'
-DB_HOST='database'
+DB_HOST='127.0.0.1'
 DB_PORT=3306
 
 # Optionally, you can use a data source name (DSN)
 # When using a DSN, you can remove the DB_NAME, DB_USER, DB_PASSWORD, and DB_HOST variables
-# DATABASE_URL='mysql://{DB_USER}:{DB_PASSWORD}@{DB_HOST}:{DB_PORT}/{DB_NAME}'
+# DATABASE_URL="mysql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}"
 
 # Optional database variables
 DB_PREFIX='wp_'
