--- a/wp_debrock/.gitignore
+++ b/wp_debrock/.gitignore
@@ -8,6 +8,12 @@ web/app/uploads/*
 !web/app/uploads/.gitkeep
 web/app/cache/*
 
+# Languages
+# Languages
+web/app/languages/*
+!web/app/languages/*/
+!web/app/languages/*/*
+!web/app/languages/.gitkeep
 # WordPress
 web/wp
 web/.htaccess
