--- a/.env.example
+++ b/.env.example
@@ -33,11 +33,11 @@ ADMINER_DEFAULT_DB_NAME=${MYSQL_DATABASE}
 SQL_DOCKER_PORT=3306
 SQL_LOCALHOST_PORT=3306
 
-MAILER_DOCKER_SMTP_PORT=1025
-MAILER_LOCALHOST_SMTP_PORT=1025
-
-MAILER_DOCKER_HTML_PORT=8025
-MAILER_LOCALHOST_HTML_PORT=8025
+# Ports pour smtp4dev
+SMTP4DEV_DOCKER_SMTP_PORT=25
+SMTP4DEV_LOCALHOST_SMTP_PORT=2525
+SMTP4DEV_DOCKER_WEB_PORT=80
+SMTP4DEV_LOCALHOST_WEB_PORT=3000
 
 HTTPS_LOCALHOST_PORT=443
 HTTP3_LOCALHOST_PORT=443
