--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,22 +28,33 @@ services:
 ###< doctrine/doctrine-bundle ###
 # ##< BASE DE DONNÉES // ADMINER ET mariadb
 
-###> MAILER // Mailpit pour capturer les emails en dev
-    mailpit:
-        platform: linux/x86_64
-        container_name: mailpit_${NAME}
-        image: axllent/mailpit:latest
+
+##> SMTP4DEV - Serveur SMTP de développement
+    smtp4dev:
+        image: rnwood/smtp4dev:latest
+        container_name: smtp4dev
         restart: no
         ports:
-            - ${MAILER_LOCALHOST_SMTP_PORT}:${MAILER_DOCKER_SMTP_PORT}   # Port SMTP
-            - ${MAILER_LOCALHOST_HTML_PORT}:${MAILER_DOCKER_HTML_PORT}   # Interface web
+            - ${SMTP4DEV_LOCALHOST_WEB_PORT}:${SMTP4DEV_DOCKER_WEB_PORT}    # Interface Web
+            - ${SMTP4DEV_LOCALHOST_SMTP_PORT}:${SMTP4DEV_DOCKER_SMTP_PORT}  # SMTP
         environment:
-            MP_MAX_MESSAGES: 5000
-            MP_SMTP_AUTH_ACCEPT_ANY: 1
-            MP_SMTP_AUTH_ALLOW_INSECURE: 1
-###< MAILER // Mailpit
+            - SMTP4DEV_HOSTNAME=smtp4dev.local
+            - SMTP4DEV_SMTP_USERNAME=dev
+            - SMTP4DEV_SMTP_PASSWORD=dev
+            - SMTP4DEV_SMTP_TLS_MODE=None
+            - SMTP4DEV_STORAGE_RETENTION_DAYS=7
+            - SMTP4DEV_RELAY_MODE=Off
+        volumes:
+            - smtp4dev-data:/smtp4dev
+        networks:
+            - dev
+# ##< SMTP4DEV - Serveur SMTP de développement
 
 volumes:
 ###> doctrine/doctrine-bundle ###
     database:
 ###< doctrine/doctrine-bundle ###
+    smtp4dev-data:
+networks:
+    dev:
+        driver: bridge
