Mise à jour des configurations dans .env.bedrock.example, ajout du service SMTP4DEV dans docker-compose.yml, et création du README-multisite pour la documentation du projet.

--- a/.env.bedrock.example
+++ b/.env.bedrock.example
@@ -12,21 +12,22 @@ FOLDER_BACK=wp_debrock
 ###> DATABASE SETTINGS ###
 # Ces valeurs doivent correspondre à celles configurées dans .env pour docker-compose
 DB_NAME=${NAME}_${BASE}
-DB_USER='user'
-DB_PASSWORD='password'
-DB_HOST='127.0.0.1'
+DB_USER=user
+DB_PASSWORD=password
 DB_PORT=3306
+DB_HOST=127.0.0.1:${DB_PORT}
+
 
 # Optionally, you can use a data source name (DSN)
 # When using a DSN, you can remove the DB_NAME, DB_USER, DB_PASSWORD, and DB_HOST variables
 # DATABASE_URL="mysql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}"
 
 # Optional database variables
-DB_PREFIX='wp_'
+DB_PREFIX=wp_
 ###< DATABASE SETTINGS ###
 
 ###> ENVIRONMENT ###
-WP_ENV='development'
+WP_ENV=development
 
 # development, staging, production
 # - development: active WP_DEBUG
@@ -35,33 +36,37 @@ WP_ENV='development'
 ###< ENVIRONMENT ###
 
 ###> URLS ###
-WP_HOME='http://localhost:8080'
-WP_SITEURL="${WP_HOME}/${FOLDER_BACK}"
+WP_DOMAIN=localhost:8080
+WP_HOME=http://${WP_DOMAIN}
+WP_SITEURL=${WP_HOME}/wp
+
 
 # Alternative pour HTTPS:
 # WP_HOME='https://votredomaine.com'
 ###< URLS ###
 
 ###> DEBUG SETTINGS ###
+WP_DEBUG=true
+
 # Chemin absolu vers le fichier de log (optionnel)
-# WP_DEBUG_LOG="${FOLDER_BACK}/debug.log"
+WP_DEBUG_LOG=true
 
 # Afficher les erreurs (true seulement en development)
-# WP_DEBUG_DISPLAY=true
+WP_DEBUG_DISPLAY=true
 ###< DEBUG SETTINGS ###
 
 ###> WORDPRESS SECURITY KEYS ###
 # Générez vos propres clés sur: https://generator.corbisier.fr
 # IMPORTANT: Remplacez ces valeurs par des clés uniques générées !
 
-AUTH_KEY='generateme'
-SECURE_AUTH_KEY='generateme'
-LOGGED_IN_KEY='generateme'
-NONCE_KEY='generateme'
-AUTH_SALT='generateme'
-SECURE_AUTH_SALT='generateme'
-LOGGED_IN_SALT='generateme'
-NONCE_SALT='generateme'
+AUTH_KEY=generateme
+SECURE_AUTH_KEY=generateme
+LOGGED_IN_KEY=generateme
+NONCE_KEY=generateme
+AUTH_SALT=generateme
+SECURE_AUTH_SALT=generateme
+LOGGED_IN_SALT=generateme
+NONCE_SALT=generateme
 ###< WORDPRESS SECURITY KEYS ###
 
 ###> OPTIONAL SETTINGS ###
