--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,10 +28,12 @@ services:
 ###< doctrine/doctrine-bundle ###
 # ##< BASE DE DONNÉES // ADMINER ET mariadb
 
+
 ##> SMTP4DEV - Serveur SMTP de développement
     smtp4dev:
+        platform: linux/x86_64
+        container_name: smtp4dev_${NAME}_${SMTP4DEV_VERSION}
         image: rnwood/smtp4dev:latest
-        container_name: smtp4dev
         restart: no
         ports:
             - ${SMTP4DEV_LOCALHOST_WEB_PORT}:${SMTP4DEV_DOCKER_WEB_PORT}    # Interface Web
